// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`interpreter store > can be created 1`] = `
{
  "builder": {
    "entities": [],
    "entitiesExtensions": {},
    "generateEntityId": [Function],
    "validateEntityId": [Function],
    "validateSchema": [Function],
  },
  "clearEntitiesValues": [Function],
  "clearEntityValue": [Function],
  "getData": [Function],
  "getEntitiesErrors": [Function],
  "getEntitiesValues": [Function],
  "getUnprocessableEntitiesIds": [Function],
  "isEntityProcessable": [Function],
  "resetEntitiesErrors": [Function],
  "resetEntitiesValues": [Function],
  "resetEntityError": [Function],
  "resetEntityValue": [Function],
  "schema": {
    "entities": {},
    "root": [],
  },
  "setData": [Function],
  "setEntitiesErrors": [Function],
  "setEntityError": [Function],
  "setEntityValue": [Function],
  "subscribe": [Function],
  "validateEntities": [Function],
  "validateEntity": [Function],
}
`;

exports[`interpreter store > can be created with initial data 1`] = `
{
  "entitiesErrors": {
    "51324b32-adc3-4d17-a90e-66b5453935bd": "error",
  },
  "entitiesValues": {
    "51324b32-adc3-4d17-a90e-66b5453935bd": undefined,
    "6e0035c3-0d4c-445f-a42b-2d971225447c": "default",
  },
  "unprocessableEntitiesIds": [],
}
`;

exports[`interpreter store > can clear all entities values 1`] = `
{
  "entitiesErrors": {},
  "entitiesValues": {},
  "unprocessableEntitiesIds": [],
}
`;

exports[`interpreter store > can clear all entities values 2`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "entitiesErrors": {},
        "entitiesValues": {},
        "unprocessableEntitiesIds": [],
      },
      [
        {
          "name": "EntityValueUpdated",
          "payload": {
            "entityId": "51324b32-adc3-4d17-a90e-66b5453935bd",
            "value": undefined,
          },
        },
        {
          "name": "EntityValueUpdated",
          "payload": {
            "entityId": "6e0035c3-0d4c-445f-a42b-2d971225447c",
            "value": undefined,
          },
        },
      ],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`interpreter store > can clear an entity value 1`] = `"Entity value not allowed."`;

exports[`interpreter store > can clear an entity value 2`] = `
{
  "entitiesErrors": {},
  "entitiesValues": {
    "6e0035c3-0d4c-445f-a42b-2d971225447c": "select value",
  },
  "unprocessableEntitiesIds": [],
}
`;

exports[`interpreter store > can clear an entity value 3`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "entitiesErrors": {},
        "entitiesValues": {
          "6e0035c3-0d4c-445f-a42b-2d971225447c": "select value",
        },
        "unprocessableEntitiesIds": [],
      },
      [
        {
          "name": "EntityValueUpdated",
          "payload": {
            "entityId": "51324b32-adc3-4d17-a90e-66b5453935bd",
            "value": undefined,
          },
        },
      ],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`interpreter store > can reset all entities errors 1`] = `
{
  "entitiesErrors": {},
  "entitiesValues": {
    "51324b32-adc3-4d17-a90e-66b5453935bd": "default",
    "6e0035c3-0d4c-445f-a42b-2d971225447c": "default",
  },
  "unprocessableEntitiesIds": [],
}
`;

exports[`interpreter store > can reset all entities errors 2`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "entitiesErrors": {},
        "entitiesValues": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": "default",
          "6e0035c3-0d4c-445f-a42b-2d971225447c": "default",
        },
        "unprocessableEntitiesIds": [],
      },
      [
        {
          "name": "EntityErrorUpdated",
          "payload": {
            "entityId": "51324b32-adc3-4d17-a90e-66b5453935bd",
            "error": undefined,
          },
        },
        {
          "name": "EntityErrorUpdated",
          "payload": {
            "entityId": "6e0035c3-0d4c-445f-a42b-2d971225447c",
            "error": undefined,
          },
        },
      ],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`interpreter store > can reset all entities values 1`] = `
{
  "entitiesErrors": {},
  "entitiesValues": {
    "51324b32-adc3-4d17-a90e-66b5453935bd": "default",
    "6e0035c3-0d4c-445f-a42b-2d971225447c": "default",
  },
  "unprocessableEntitiesIds": [],
}
`;

exports[`interpreter store > can reset all entities values 2`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "entitiesErrors": {},
        "entitiesValues": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": "default",
          "6e0035c3-0d4c-445f-a42b-2d971225447c": "default",
        },
        "unprocessableEntitiesIds": [],
      },
      [
        {
          "name": "EntityValueUpdated",
          "payload": {
            "entityId": "51324b32-adc3-4d17-a90e-66b5453935bd",
            "value": "default",
          },
        },
        {
          "name": "EntityValueUpdated",
          "payload": {
            "entityId": "6e0035c3-0d4c-445f-a42b-2d971225447c",
            "value": "default",
          },
        },
      ],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`interpreter store > can reset an entity error 1`] = `"Entity error not allowed."`;

exports[`interpreter store > can reset an entity error 2`] = `
{
  "entitiesErrors": {
    "6e0035c3-0d4c-445f-a42b-2d971225447c": "select error",
  },
  "entitiesValues": {
    "51324b32-adc3-4d17-a90e-66b5453935bd": "default",
    "6e0035c3-0d4c-445f-a42b-2d971225447c": "default",
  },
  "unprocessableEntitiesIds": [],
}
`;

exports[`interpreter store > can reset an entity error 3`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "entitiesErrors": {
          "6e0035c3-0d4c-445f-a42b-2d971225447c": "select error",
        },
        "entitiesValues": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": "default",
          "6e0035c3-0d4c-445f-a42b-2d971225447c": "default",
        },
        "unprocessableEntitiesIds": [],
      },
      [
        {
          "name": "EntityErrorUpdated",
          "payload": {
            "entityId": "51324b32-adc3-4d17-a90e-66b5453935bd",
            "error": undefined,
          },
        },
      ],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`interpreter store > can reset an entity value 1`] = `"Entity value not allowed."`;

exports[`interpreter store > can reset an entity value 2`] = `
{
  "entitiesErrors": {},
  "entitiesValues": {
    "51324b32-adc3-4d17-a90e-66b5453935bd": "default",
    "6e0035c3-0d4c-445f-a42b-2d971225447c": "select value",
  },
  "unprocessableEntitiesIds": [],
}
`;

exports[`interpreter store > can reset an entity value 3`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "entitiesErrors": {},
        "entitiesValues": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": "default",
          "6e0035c3-0d4c-445f-a42b-2d971225447c": "select value",
        },
        "unprocessableEntitiesIds": [],
      },
      [
        {
          "name": "EntityValueUpdated",
          "payload": {
            "entityId": "51324b32-adc3-4d17-a90e-66b5453935bd",
            "value": "default",
          },
        },
      ],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`interpreter store > can return the data 1`] = `
{
  "entitiesErrors": {},
  "entitiesValues": {
    "51324b32-adc3-4d17-a90e-66b5453935bd": "default",
  },
  "unprocessableEntitiesIds": [],
}
`;

exports[`interpreter store > can set an entity error 1`] = `"Entity error not allowed."`;

exports[`interpreter store > can set an entity error 2`] = `
{
  "entitiesErrors": {
    "51324b32-adc3-4d17-a90e-66b5453935bd": "new error",
    "6e0035c3-0d4c-445f-a42b-2d971225447c": "select error",
  },
  "entitiesValues": {
    "51324b32-adc3-4d17-a90e-66b5453935bd": "default",
    "6e0035c3-0d4c-445f-a42b-2d971225447c": "default",
  },
  "unprocessableEntitiesIds": [],
}
`;

exports[`interpreter store > can set an entity error 3`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "entitiesErrors": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": "new error",
          "6e0035c3-0d4c-445f-a42b-2d971225447c": "select error",
        },
        "entitiesValues": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": "default",
          "6e0035c3-0d4c-445f-a42b-2d971225447c": "default",
        },
        "unprocessableEntitiesIds": [],
      },
      [
        {
          "name": "EntityErrorUpdated",
          "payload": {
            "entityId": "51324b32-adc3-4d17-a90e-66b5453935bd",
            "error": "new error",
          },
        },
      ],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`interpreter store > can set an entity value 1`] = `"Entity value not allowed."`;

exports[`interpreter store > can set an entity value 2`] = `
{
  "entitiesErrors": {},
  "entitiesValues": {
    "51324b32-adc3-4d17-a90e-66b5453935bd": "new value",
    "6e0035c3-0d4c-445f-a42b-2d971225447c": "select value",
  },
  "unprocessableEntitiesIds": [],
}
`;

exports[`interpreter store > can set an entity value 3`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "entitiesErrors": {},
        "entitiesValues": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": "new value",
          "6e0035c3-0d4c-445f-a42b-2d971225447c": "select value",
        },
        "unprocessableEntitiesIds": [],
      },
      [
        {
          "name": "EntityValueUpdated",
          "payload": {
            "entityId": "51324b32-adc3-4d17-a90e-66b5453935bd",
            "value": "new value",
          },
        },
      ],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`interpreter store > can set entities errors 1`] = `"Entity error not allowed."`;

exports[`interpreter store > can set entities errors 2`] = `
{
  "entitiesErrors": {
    "51324b32-adc3-4d17-a90e-66b5453935bd": "new text error",
    "6e0035c3-0d4c-445f-a42b-2d971225447c": "new select error",
  },
  "entitiesValues": {
    "51324b32-adc3-4d17-a90e-66b5453935bd": "default",
    "6e0035c3-0d4c-445f-a42b-2d971225447c": "default",
    "e31665da-9663-4a4f-87ac-cd326760863e": "default",
  },
  "unprocessableEntitiesIds": [],
}
`;

exports[`interpreter store > can set entities errors 3`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "entitiesErrors": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": "new text error",
          "6e0035c3-0d4c-445f-a42b-2d971225447c": "new select error",
        },
        "entitiesValues": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": "default",
          "6e0035c3-0d4c-445f-a42b-2d971225447c": "default",
          "e31665da-9663-4a4f-87ac-cd326760863e": "default",
        },
        "unprocessableEntitiesIds": [],
      },
      [
        {
          "name": "EntityErrorUpdated",
          "payload": {
            "entityId": "e31665da-9663-4a4f-87ac-cd326760863e",
            "error": undefined,
          },
        },
        {
          "name": "EntityErrorUpdated",
          "payload": {
            "entityId": "51324b32-adc3-4d17-a90e-66b5453935bd",
            "error": "new text error",
          },
        },
        {
          "name": "EntityErrorUpdated",
          "payload": {
            "entityId": "6e0035c3-0d4c-445f-a42b-2d971225447c",
            "error": "new select error",
          },
        },
      ],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`interpreter store > can set the data 1`] = `"Entity value not allowed."`;

exports[`interpreter store > can set the data 2`] = `"Entity error not allowed."`;

exports[`interpreter store > can set the data 3`] = `
{
  "entitiesErrors": {
    "51324b32-adc3-4d17-a90e-66b5453935bd": "new error",
  },
  "entitiesValues": {
    "51324b32-adc3-4d17-a90e-66b5453935bd": "new value",
  },
  "unprocessableEntitiesIds": [],
}
`;

exports[`interpreter store > can set the data 4`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "entitiesErrors": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": "new error",
        },
        "entitiesValues": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": "new value",
        },
        "unprocessableEntitiesIds": [],
      },
      [
        {
          "name": "DataSet",
          "payload": {
            "data": {
              "entitiesErrors": {
                "51324b32-adc3-4d17-a90e-66b5453935bd": "new error",
              },
              "entitiesValues": {
                "51324b32-adc3-4d17-a90e-66b5453935bd": "new value",
              },
              "unprocessableEntitiesIds": [],
            },
          },
        },
      ],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`interpreter store > can validate entities 1`] = `
{
  "entitiesErrors": {
    "51324b32-adc3-4d17-a90e-66b5453935bd": [ZodError: [
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "undefined",
    "path": [],
    "message": "Required"
  }
]],
    "6e0035c3-0d4c-445f-a42b-2d971225447c": [ZodError: [
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "undefined",
    "path": [],
    "message": "Required"
  }
]],
  },
  "entitiesValues": {
    "2df173ee-6b88-4744-a74d-0f21d49166b3": "valid",
    "51324b32-adc3-4d17-a90e-66b5453935bd": undefined,
    "6e0035c3-0d4c-445f-a42b-2d971225447c": undefined,
  },
  "unprocessableEntitiesIds": [],
}
`;

exports[`interpreter store > can validate entities 2`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "entitiesErrors": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": [ZodError: [
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "undefined",
    "path": [],
    "message": "Required"
  }
]],
        },
        "entitiesValues": {
          "2df173ee-6b88-4744-a74d-0f21d49166b3": "valid",
          "51324b32-adc3-4d17-a90e-66b5453935bd": undefined,
          "6e0035c3-0d4c-445f-a42b-2d971225447c": undefined,
        },
        "unprocessableEntitiesIds": [],
      },
      [
        {
          "name": "EntityErrorUpdated",
          "payload": {
            "entityId": "51324b32-adc3-4d17-a90e-66b5453935bd",
            "error": [ZodError: [
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "undefined",
    "path": [],
    "message": "Required"
  }
]],
          },
        },
      ],
    ],
    [
      {
        "entitiesErrors": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": [ZodError: [
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "undefined",
    "path": [],
    "message": "Required"
  }
]],
        },
        "entitiesValues": {
          "2df173ee-6b88-4744-a74d-0f21d49166b3": "valid",
          "51324b32-adc3-4d17-a90e-66b5453935bd": undefined,
          "6e0035c3-0d4c-445f-a42b-2d971225447c": undefined,
        },
        "unprocessableEntitiesIds": [],
      },
      [
        {
          "name": "EntityErrorUpdated",
          "payload": {
            "entityId": "2df173ee-6b88-4744-a74d-0f21d49166b3",
            "error": undefined,
          },
        },
      ],
    ],
    [
      {
        "entitiesErrors": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": [ZodError: [
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "undefined",
    "path": [],
    "message": "Required"
  }
]],
          "6e0035c3-0d4c-445f-a42b-2d971225447c": [ZodError: [
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "undefined",
    "path": [],
    "message": "Required"
  }
]],
        },
        "entitiesValues": {
          "2df173ee-6b88-4744-a74d-0f21d49166b3": "valid",
          "51324b32-adc3-4d17-a90e-66b5453935bd": undefined,
          "6e0035c3-0d4c-445f-a42b-2d971225447c": undefined,
        },
        "unprocessableEntitiesIds": [],
      },
      [
        {
          "name": "EntityErrorUpdated",
          "payload": {
            "entityId": "51324b32-adc3-4d17-a90e-66b5453935bd",
            "error": [ZodError: [
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "undefined",
    "path": [],
    "message": "Required"
  }
]],
          },
        },
        {
          "name": "EntityErrorUpdated",
          "payload": {
            "entityId": "6e0035c3-0d4c-445f-a42b-2d971225447c",
            "error": [ZodError: [
  {
    "code": "invalid_type",
    "expected": "string",
    "received": "undefined",
    "path": [],
    "message": "Required"
  }
]],
          },
        },
        {
          "name": "EntityErrorUpdated",
          "payload": {
            "entityId": "2df173ee-6b88-4744-a74d-0f21d49166b3",
            "error": undefined,
          },
        },
      ],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`interpreter store > computes entities processability when clearing values 1`] = `
[
  "51324b32-adc3-4d17-a90e-66b5453935bd",
]
`;

exports[`interpreter store > computes entities processability when clearing values 2`] = `[]`;

exports[`interpreter store > computes entities processability when clearing values 3`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "entitiesErrors": {},
        "entitiesValues": {},
        "unprocessableEntitiesIds": [
          "51324b32-adc3-4d17-a90e-66b5453935bd",
        ],
      },
      [
        {
          "name": "EntityValueUpdated",
          "payload": {
            "entityId": "51324b32-adc3-4d17-a90e-66b5453935bd",
            "value": undefined,
          },
        },
        {
          "name": "EntityUnprocessable",
          "payload": {
            "entityId": "51324b32-adc3-4d17-a90e-66b5453935bd",
          },
        },
      ],
    ],
    [
      {
        "entitiesErrors": {},
        "entitiesValues": {},
        "unprocessableEntitiesIds": [],
      },
      [
        {
          "name": "EntityValueUpdated",
          "payload": {
            "entityId": "51324b32-adc3-4d17-a90e-66b5453935bd",
            "value": undefined,
          },
        },
        {
          "name": "EntityProcessable",
          "payload": {
            "entityId": "51324b32-adc3-4d17-a90e-66b5453935bd",
          },
        },
      ],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`interpreter store > computes entities processability when clearing values of all entities 1`] = `
[
  "51324b32-adc3-4d17-a90e-66b5453935bd",
]
`;

exports[`interpreter store > computes entities processability when clearing values of all entities 2`] = `[]`;

exports[`interpreter store > computes entities processability when clearing values of all entities 3`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "entitiesErrors": {},
        "entitiesValues": {},
        "unprocessableEntitiesIds": [
          "51324b32-adc3-4d17-a90e-66b5453935bd",
        ],
      },
      [
        {
          "name": "EntityValueUpdated",
          "payload": {
            "entityId": "51324b32-adc3-4d17-a90e-66b5453935bd",
            "value": undefined,
          },
        },
        {
          "name": "EntityUnprocessable",
          "payload": {
            "entityId": "51324b32-adc3-4d17-a90e-66b5453935bd",
          },
        },
      ],
    ],
    [
      {
        "entitiesErrors": {},
        "entitiesValues": {},
        "unprocessableEntitiesIds": [],
      },
      [
        {
          "name": "EntityProcessable",
          "payload": {
            "entityId": "51324b32-adc3-4d17-a90e-66b5453935bd",
          },
        },
      ],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`interpreter store > computes entities processability when created 1`] = `
[
  "51324b32-adc3-4d17-a90e-66b5453935bd",
]
`;

exports[`interpreter store > computes entities processability when created 2`] = `false`;

exports[`interpreter store > computes entities processability when created 3`] = `true`;

exports[`interpreter store > computes entities processability when resetting values 1`] = `
[
  "51324b32-adc3-4d17-a90e-66b5453935bd",
]
`;

exports[`interpreter store > computes entities processability when resetting values 2`] = `[]`;

exports[`interpreter store > computes entities processability when resetting values 3`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "entitiesErrors": {},
        "entitiesValues": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": undefined,
        },
        "unprocessableEntitiesIds": [
          "51324b32-adc3-4d17-a90e-66b5453935bd",
        ],
      },
      [
        {
          "name": "EntityValueUpdated",
          "payload": {
            "entityId": "51324b32-adc3-4d17-a90e-66b5453935bd",
            "value": undefined,
          },
        },
        {
          "name": "EntityUnprocessable",
          "payload": {
            "entityId": "51324b32-adc3-4d17-a90e-66b5453935bd",
          },
        },
      ],
    ],
    [
      {
        "entitiesErrors": {},
        "entitiesValues": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": undefined,
        },
        "unprocessableEntitiesIds": [],
      },
      [
        {
          "name": "EntityValueUpdated",
          "payload": {
            "entityId": "51324b32-adc3-4d17-a90e-66b5453935bd",
            "value": undefined,
          },
        },
        {
          "name": "EntityProcessable",
          "payload": {
            "entityId": "51324b32-adc3-4d17-a90e-66b5453935bd",
          },
        },
      ],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`interpreter store > computes entities processability when resetting values of all entities 1`] = `
[
  "51324b32-adc3-4d17-a90e-66b5453935bd",
]
`;

exports[`interpreter store > computes entities processability when resetting values of all entities 2`] = `[]`;

exports[`interpreter store > computes entities processability when resetting values of all entities 3`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "entitiesErrors": {},
        "entitiesValues": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": undefined,
        },
        "unprocessableEntitiesIds": [
          "51324b32-adc3-4d17-a90e-66b5453935bd",
        ],
      },
      [
        {
          "name": "EntityValueUpdated",
          "payload": {
            "entityId": "51324b32-adc3-4d17-a90e-66b5453935bd",
            "value": undefined,
          },
        },
        {
          "name": "EntityUnprocessable",
          "payload": {
            "entityId": "51324b32-adc3-4d17-a90e-66b5453935bd",
          },
        },
      ],
    ],
    [
      {
        "entitiesErrors": {},
        "entitiesValues": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": undefined,
        },
        "unprocessableEntitiesIds": [],
      },
      [
        {
          "name": "EntityValueUpdated",
          "payload": {
            "entityId": "51324b32-adc3-4d17-a90e-66b5453935bd",
            "value": undefined,
          },
        },
        {
          "name": "EntityProcessable",
          "payload": {
            "entityId": "51324b32-adc3-4d17-a90e-66b5453935bd",
          },
        },
      ],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`interpreter store > computes entities processability when setting data 1`] = `
[
  "51324b32-adc3-4d17-a90e-66b5453935bd",
]
`;

exports[`interpreter store > computes entities processability when setting data 2`] = `[]`;

exports[`interpreter store > computes entities processability when setting data 3`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "entitiesErrors": {},
        "entitiesValues": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": "string",
        },
        "unprocessableEntitiesIds": [
          "51324b32-adc3-4d17-a90e-66b5453935bd",
        ],
      },
      [
        {
          "name": "DataSet",
          "payload": {
            "data": {
              "entitiesErrors": {},
              "entitiesValues": {
                "51324b32-adc3-4d17-a90e-66b5453935bd": "string",
              },
              "unprocessableEntitiesIds": [
                "51324b32-adc3-4d17-a90e-66b5453935bd",
              ],
            },
          },
        },
        {
          "name": "EntityUnprocessable",
          "payload": {
            "entityId": "51324b32-adc3-4d17-a90e-66b5453935bd",
          },
        },
      ],
    ],
    [
      {
        "entitiesErrors": {},
        "entitiesValues": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": "string",
        },
        "unprocessableEntitiesIds": [],
      },
      [
        {
          "name": "DataSet",
          "payload": {
            "data": {
              "entitiesErrors": {},
              "entitiesValues": {
                "51324b32-adc3-4d17-a90e-66b5453935bd": "string",
              },
              "unprocessableEntitiesIds": [],
            },
          },
        },
        {
          "name": "EntityProcessable",
          "payload": {
            "entityId": "51324b32-adc3-4d17-a90e-66b5453935bd",
          },
        },
      ],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`interpreter store > computes entities processability when updating values 1`] = `
[
  "51324b32-adc3-4d17-a90e-66b5453935bd",
]
`;

exports[`interpreter store > computes entities processability when updating values 2`] = `[]`;

exports[`interpreter store > computes entities processability when updating values 3`] = `
[MockFunction spy] {
  "calls": [
    [
      {
        "entitiesErrors": {},
        "entitiesValues": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": undefined,
        },
        "unprocessableEntitiesIds": [
          "51324b32-adc3-4d17-a90e-66b5453935bd",
        ],
      },
      [
        {
          "name": "EntityValueUpdated",
          "payload": {
            "entityId": "51324b32-adc3-4d17-a90e-66b5453935bd",
            "value": undefined,
          },
        },
        {
          "name": "EntityUnprocessable",
          "payload": {
            "entityId": "51324b32-adc3-4d17-a90e-66b5453935bd",
          },
        },
      ],
    ],
    [
      {
        "entitiesErrors": {},
        "entitiesValues": {
          "51324b32-adc3-4d17-a90e-66b5453935bd": undefined,
        },
        "unprocessableEntitiesIds": [],
      },
      [
        {
          "name": "EntityValueUpdated",
          "payload": {
            "entityId": "51324b32-adc3-4d17-a90e-66b5453935bd",
            "value": undefined,
          },
        },
        {
          "name": "EntityProcessable",
          "payload": {
            "entityId": "51324b32-adc3-4d17-a90e-66b5453935bd",
          },
        },
      ],
    ],
  ],
  "results": [
    {
      "type": "return",
      "value": undefined,
    },
    {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`interpreter store > doesn't reset entities values when created if configured to 1`] = `{}`;

exports[`interpreter store > resets entities values when created 1`] = `
{
  "51324b32-adc3-4d17-a90e-66b5453935bd": "default",
  "6e0035c3-0d4c-445f-a42b-2d971225447c": undefined,
}
`;

exports[`unprocessable entities computation > computes the unprocessable entities and events 1`] = `
{
  "events": [],
  "unprocessableEntitiesIds": Set {},
}
`;

exports[`unprocessable entities computation > computes the unprocessable entities and events 2`] = `
{
  "events": [
    {
      "name": "EntityUnprocessable",
      "payload": {
        "entityId": "51324b32-adc3-4d17-a90e-66b5453935bd",
      },
    },
  ],
  "unprocessableEntitiesIds": Set {
    "51324b32-adc3-4d17-a90e-66b5453935bd",
  },
}
`;

exports[`unprocessable entities computation > computes the unprocessable entities and events 3`] = `
{
  "events": [
    {
      "name": "EntityProcessable",
      "payload": {
        "entityId": "51324b32-adc3-4d17-a90e-66b5453935bd",
      },
    },
  ],
  "unprocessableEntitiesIds": Set {},
}
`;

exports[`unprocessable entities computation > computes the unprocessable entities recursively 1`] = `
{
  "events": [
    {
      "name": "EntityUnprocessable",
      "payload": {
        "entityId": "51324b32-adc3-4d17-a90e-66b5453935bd",
      },
    },
  ],
  "unprocessableEntitiesIds": Set {
    "2df173ee-6b88-4744-a74d-0f21d49166b3",
    "51324b32-adc3-4d17-a90e-66b5453935bd",
  },
}
`;

exports[`unprocessable entities computation > computes the unprocessable entities recursively 2`] = `
{
  "events": [
    {
      "name": "EntityUnprocessable",
      "payload": {
        "entityId": "6e0035c3-0d4c-445f-a42b-2d971225447c",
      },
    },
  ],
  "unprocessableEntitiesIds": Set {
    "6e0035c3-0d4c-445f-a42b-2d971225447c",
  },
}
`;

exports[`unprocessable entities computation > computes the unprocessable entities recursively 3`] = `
{
  "events": [
    {
      "name": "EntityUnprocessable",
      "payload": {
        "entityId": "2df173ee-6b88-4744-a74d-0f21d49166b3",
      },
    },
  ],
  "unprocessableEntitiesIds": Set {
    "2df173ee-6b88-4744-a74d-0f21d49166b3",
  },
}
`;

exports[`unprocessable entities computation > computes the unprocessable entities recursively 4`] = `
{
  "events": [
    {
      "name": "EntityProcessable",
      "payload": {
        "entityId": "6e0035c3-0d4c-445f-a42b-2d971225447c",
      },
    },
    {
      "name": "EntityProcessable",
      "payload": {
        "entityId": "2df173ee-6b88-4744-a74d-0f21d49166b3",
      },
    },
  ],
  "unprocessableEntitiesIds": Set {},
}
`;
